# optina-optimisations

./: .gitignore  .gitleaks.toml  .prettierignore  README.md  SetUpServer.md  all-checks.sh  argparse_helpers.py  check.sh  cloud_config.py  common.py  health.sh  metrics.py  package.json  pricing.py  pyproject.toml  renovate-check.sh  renovate.json  tsconfig.json  vitest.config.ts
benchmarks/: README.md  biome.json  eslint.config.js  package.json  pnpm-lock.yaml
benchmarks/compose/: docker-compose.16gb.yml  docker-compose.64gb.yml  docker-compose.minio-cluster.yml  docker-compose.standalone-minio.yml  docker-compose.yml
benchmarks/src/: benchmark.ts  generate-data.ts  index.ts  runners.ts  utils.ts
benchmarks/tests/: utils.test.ts
compose/: docker-compose.32gb.yml  docker-compose.remote-s3.yml
compose/trino/: config.32gb.properties  config.properties  exchange-manager.remote-s3.properties
docs/: BasePerfTesting.md  OPTIMIZERS.md  OPTIMIZER_GUIDE.md
optimizers/meilisearch/: README.md  RESULTS_SELECTEL.md  benchmark.js  metrics.py  optimizer.py
optimizers/minio/: README.md  RESULTS_SELECTEL.md  cloud_config.py  metrics.py  optimizer.py
optuna/: .gitignore  README.md  check.sh
results/: meilisearch.json  minio.json  redis.json  results.json
src/: benchmark.ts  generate-data.ts  index.ts  queries.ts  runners.ts  types.ts
storage/: __init__.py  models.py  store.py
terraform/: .gitignore  README.md  check.sh
tests/: __init__.py  test_argparse_helpers.py  test_cloud_config.py  test_common.py  test_metrics.py  test_pricing.py
(+79 files in other folders)
